# Project2

./: CMakeLists.txt
source/: Camera.cpp  ClippingPlane.cpp  Defines.cpp  FrameBuffer.cpp  Lab.cpp  PerFragmentOperations.cpp  PerVertexOperations.cpp  Rasterization.cpp  Shape.cpp  ShapeStructs.cpp
source/headers/: Camera.h  ClippingPlane.h  Defines.h  FrameBuffer.h  Lab.h  Lights.h  Material.h  PerFragmentOperations.h  PerVertexOperations.h  Rasterization.h  Shape.h  ShapeStructs.h  VertexData.h
